k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: taxsense
  labels:
    name: taxsense
    environment: production
